[package]
name = "linked_list"
version = "0.1.0"
edition = "2021"
authors = ["Wedson Almeida Filho <wedsonaf@google.com>"]
description = "Linked lists that supports arbitrary removal in constant time"
license = "GPL-2.0-or-later"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/linked_list"
documentation = "https://arceos-org.github.io/linked_list"

[dependencies]
